# tdv

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README  README.adoc  config.h.in  sdcli.c  sdgui.desktop  stardict.c  stardict.h  tdv.desktop  tdv.xml  test-stardict.c
cmake/: FindLibIntl.cmake  Win32Cleanup.cmake  Win32CleanupAdwaita.sh  Win64CrossToolchain.cmake  Win64Depends.sh
dicts/: czech-wordnet.pl  gnu-fdl-de-cz.sh  gnu-fdl-en-cz.sh  slovnik-cizich-slov.sh
docs/: sdtui.1.adoc  sdtui.1.xml  tdv.1.adoc
po/: cs.po  make-template.sh  sdtui.pot  tdv.pot
src/: add-pronunciation.c  dictzip-input-stream.c  dictzip-input-stream.h  generator.c  generator.h  query-tool.c  sdgtk.c  sdgui.c  sdtui.c  stardict-private.h  stardict-view.c  stardict-view.h  stardict.c  stardict.h  tabfile.c  tdv-add-pronunciation.c  tdv-gui.c  tdv-tabfile.c  tdv-transform.c  tdv-tui.c  tdv.c  test-stardict.c  transform.c  utils.c  utils.h
